[package]
name = "batch-track"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5" , features = ["tracing"]}
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
serde = { version = "1.0.202", features = ["derive"] }

